cambio de titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-    <h1>Mis tareas</h1>
+    <h1>Mi tarea</h1>
 
     <div class="cont-menu">
     <button id="addBtn" type="button">Agregar</button>
